# DSC180A-Project-1

./: Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  run.py  setup.py  submission.json  tox.ini
config/: data-params.yaml
data/: .gitignore
data/test/testdata/: test.txt
models/: .gitignore  schema.json
models/example/: config.json
notebooks/: 20221205-nickthegroot-model-analysis.ipynb  211030-nickthegroot-src-dev.ipynb  221029-nickthegroot-data-exploration.ipynb  221030-nickthegroot-data-statistics.ipynb  221030-nickthegroot-src-dev.ipynb
reports/: citations.bib  neurips_2020.sty  project.tex
roomgraph/: consts.py
roomgraph/cli/: make_dataset.py  train.py
roomgraph/data/: cubicasa5k.py  data_module.py  etl.py  types.py  util.py
roomgraph/models/: base_gnn.py  gat.py  gcn.py  graphsage.py  mlp.py  tagcn.py
roomgraph/tests/: test_graph_gen.py
roomgraph/types/: __init__.py  config.py  room.py  util.py
src/data/: etl.py  types.py
