[tool.poetry]
name = "q1-project"
version = "0.1.0"
description = ""
authors = ["Nick DeGroot <ndegroot@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
geopandas = "^0.12.1"
matplotlib = "^3.6.1"
shapely = "2.0b1"
networkx = "^2.8.7"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.1"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
