[tool.poetry]
name = "roomgraph"
version = "0.1.0"
description = "DSC180A Q1 Project"
authors = ["Nick DeGroot <ndegroot@ucsd.edu>"]

[tool.poetry.scripts]
train = "roomgraph.cli.train:run"
make_dataset = "roomgraph.cli.make_dataset:run"


[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
geopandas = "^0.12.1"
lxml = "^4.9.1"
pydantic = "^1.10.2"
pygeos = "^0.13"

# Included in Docker image, but still required for local development
[tool.poetry.group.local.dependencies]
torch = "^1.13.0"
pytorch-lightning = "^1.8.3.post1"
torchmetrics = "^0.11.0"
pyg-lib = "^0.1.0+pt113cu117"
torch-cluster = "^1.6.0+pt113cu117"
torch-geometric = "^2.1.0.post1"
torch-scatter = "^2.1.0+pt113cu117"
torch-sparse = "^0.6.15+pt113cu117"
torch-spline-conv = "^1.2.1+pt113cu117"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
docstr-coverage = "^2.2.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
ipython = "^8.7.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
mypy = "^0.991"
pandas = "^1.5.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"
tensorboard = "^2.11.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[[tool.poetry.source]]
name = "PyG"
url = "https://data.pyg.org/whl/torch-1.13.0+cu117.html"
default = false
secondary = false

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
src_paths = ["roomgraph", "tests"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
